Fixed home module's iconset config and disabled automatic hyphenation of icon titles

--- a/themes/princeton/common/config/theme.yaml
+++ b/themes/princeton/common/config/theme.yaml
@@ -1,5 +1,6 @@
 ---
 common:
+    grid_item_navigation_hyphenate: false
     title_icon_set: mono-white               # Iconset to use for module icons displayed in top navbar.
     navmenu_show_icons: true                 # Whether or not to show icons in the side navigation menu.  May degrade performance.
     navmenu_icon_set: mono-white             # If navmenu_show_icons is true, which iconset to use for module icons.
