--- a/themes/princeton/modules/home/config/theme.yaml
+++ b/themes/princeton/modules/home/config/theme.yaml
@@ -12,9 +12,9 @@ common:
     home_hero_image_alignment: center
 
     # This section only applies when this module is configured as springboard-style layout
-    content_navigation_grid_icon_set: mono
+    content_navigation_grid_icon_set: mono-white
     content_navigation_grid_icon_size: "120"
-    content_navigation_grid_utility_icon_set: mono
+    content_navigation_grid_utility_icon_set: mono-white
     content_navigation_grid_utility_icon_size: "60"
 
     # This section only applies when this module is configured as list-style layout
