Added news type with no hero image

--- a/config/itemtypes/princeton-news/info.yaml
+++ b/config/itemtypes/princeton-news/info.yaml
@@ -22,7 +22,5 @@ common:
             fields:
                 description: null
                 thumbnail: null
-                hero:
-                -   kgoResolveType: value
-                    kgoResolveValue: kgonews:thumbnail
+                hero: null
 ...
