Added map placemark

--- a/config/feedtypes/princeton-arcgis-mapfeature/info.yaml
+++ b/config/feedtypes/princeton-arcgis-mapfeature/info.yaml
@@ -6,7 +6,7 @@ servicetype: modo-arcgis
 args:
     dataModel: KGOMapDataModel
     dataRetriever: PrincetonArcGISDataRetriever
-    itemtype: placemark
+    itemtype: princeton-map-placemark
 config:
 -   class: KGOFormElementControllerText
     options:
